--- a/src/Components/contact/Contact.css
+++ b/src/Components/contact/Contact.css
@@ -27,25 +27,65 @@
 .contact-container .contact-content-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 40vw 60vw;
-      grid-template-columns: 40vw 60vw;
+  -ms-grid-columns: 45vw 55vw;
+      grid-template-columns: 45vw 55vw;
   -ms-grid-rows: 80%;
       grid-template-rows: 80%;
   overflow: hidden;
+  height: 80%;
+  margin: auto;
 }
 
 .contact-container .contact-content-container .contact-left {
   height: 100%;
   width: 100%;
-  background-color: aqua;
 }
 
-.contact-container .contact-content-container .contact-left .contact-form-container {
-  background-color: blueviolet;
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top {
+  background-color: rgba(128, 128, 128, 0.407);
   width: 60%;
-  height: 70%;
+  height: 65%;
   margin: 5vh auto 0 auto;
   border: black 3px solid;
+  padding: 1%;
+  font-size: 1.2vw;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .name-input {
+  width: 100%;
+  font-size: 1.75vw;
+  margin: 5% auto;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .email-input {
+  width: 100%;
+  font-size: 1.75vw;
+  margin: 5% auto;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .contact-radio-buttons {
+  margin: 6% auto;
+  border: none;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .contact-radio-buttons input {
+  margin: 3% auto;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-top .contact-radio-buttons .contact-option-label {
+  margin: auto 2%;
+}
+
+.contact-container .contact-content-container .contact-left .contact-form-container .contact-form-bottom input {
+  margin: 2% 35% 0 35%;
+  width: 30%;
+  height: 6vh;
+  font-family: Michroma;
+  font-weight: 500;
+  font-size: 1.5vw;
+  letter-spacing: .15em;
+  color: white;
+  background-color: var(--primary-color);
 }
 
 .contact-container .contact-content-container .contact-right {
@@ -54,8 +94,47 @@
 }
 
 .contact-container .contact-content-container .contact-right img {
-  height: 100%;
+  height: 130%;
   position: relative;
-  right: -10%;
+}
+
+@media only screen and (max-width: 1249px) {
+  .contact-container .contact-header {
+    margin: 8vw 3vw;
+    font-size: 9vmin;
+  }
+  .contact-container .contact-content-container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 90vw;
+        grid-template-columns: 90vw;
+    -ms-grid-rows: 80%;
+        grid-template-rows: 80%;
+    overflow: hidden;
+    margin: 0px 0px 0px 5%;
+  }
+  .contact-container .contact-content-container .contact-left {
+    background-color: pink;
+  }
+  .contact-container .contact-content-container .contact-left .contact-form-container {
+    margin: 0px 0px 0px 0px;
+    padding: 0px;
+    background-color: orange;
+    height: 100%;
+  }
+  .contact-container .contact-content-container .contact-left .contact-form-container form {
+    height: 100%;
+  }
+  .contact-container .contact-content-container .contact-left .contact-form-container form .contact-form-top {
+    margin: 0px auto;
+    height: 85%;
+  }
+  .contact-container .contact-content-container .contact-left .contact-form-container form .contact-form-bottom {
+    width: 100%;
+    height: 15%;
+  }
+  .contact-container .contact-content-container .contact-right {
+    display: none;
+  }
 }
 /*# sourceMappingURL=Contact.css.map */
