--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -30,21 +30,75 @@
 
     .contact-content-container {
       display: grid;
-      grid-template-columns: 40vw 60vw;
+      grid-template-columns: 45vw 55vw;
       grid-template-rows: 80%;
       overflow: hidden;
+      height: 80%;
+      margin: auto;
 
 
       .contact-left {
         height: 100%;
         width: 100%;
-        background-color: aqua;
+        // background-color: aqua;
+
+
+
+        
         .contact-form-container {
-          background-color: blueviolet;
-          width: 60%;
-          height: 70%;
-          margin: 5vh auto 0 auto;
-          border: black 3px solid;
+         // background-color: orange;
+
+
+          .contact-form-top {
+
+            background-color: rgba(128, 128, 128, 0.407);
+            width: 60%;
+            height: 65%;
+            margin: 5vh auto 0 auto;
+            border: black 3px solid;
+            padding: 1%;
+            font-size: 1.2vw;
+            .name-input {
+              width: 100%;
+              font-size: 1.75vw;
+              margin: 5% auto;
+            }
+            .email-input {
+              width: 100%;
+              font-size: 1.75vw;
+              margin: 5% auto;
+            }
+
+            .contact-radio-buttons {
+              margin: 6% auto;
+              border: none;
+
+              input {
+                margin: 3% auto;
+              }
+
+              .contact-option-label {
+                margin: auto 2%;
+              }
+            }
+          }          
+          .contact-form-bottom {
+            //background-color: gray;
+
+            input {
+              margin: 2% 35% 0 35%;
+              width: 30%;
+              height: 6vh;
+              font-family: Michroma;
+              font-weight: 500;
+              font-size: 1.5vw;
+              letter-spacing: .15em;
+              color: white;
+              background-color: var(--primary-color);
+              
+            }
+          
+          }
         }
       }
 
@@ -53,11 +107,84 @@
         width: 100%;
 
         img {
-          height: 100%;
+          height: 130%;
+          // margin: 0 0 5% 0;
           position: relative;
-          right: -10%;
+          // right: -5%;
         }
 
       }
     }
 }
+
+
+
+@media only screen and (max-width: 1249px) {
+
+  .contact-container {
+
+
+    .contact-header {
+      margin: 8vw 3vw;
+      font-size: 9vmin;
+
+    }
+
+    .contact-content-container {
+      display: grid;
+      grid-template-columns: 90vw;
+      grid-template-rows: 80%;
+      overflow: hidden;
+      // height: 80%;
+      margin: 0px 0px 0px 5%; 
+
+
+      .contact-left {
+        
+        background-color: pink;
+        .contact-form-container {
+          margin: 0px 0px 0px 0px;
+          padding: 0px;
+          background-color: orange;
+          height: 100%;
+          
+          form {
+            height: 100%;
+            
+            .contact-form-top {
+              margin: 0px auto;
+              //width: 100%;
+
+              height: 85%;
+            }
+
+            .contact-form-bottom {
+              width: 100%;
+
+              height: 15%;
+            }            
+          }
+
+
+        }
+
+      }
+
+      .contact-right {
+        display: none;
+      }
+
+    }
+
+
+
+  }
+
+
+}
+
+@media only screen and (max-width:500px) {
+
+}
+
+
