--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -2,7 +2,7 @@
 
 .hero-container {
      height: 100vh;
-     min-height: 750px;
+    //  min-height: 750px;
      border: 5px solid black; 
      color: var(--primary-color);
      font-family: Michroma;
@@ -55,21 +55,21 @@
 
         .heroContent {
             display: flex;
-            min-height: 718px;
+            // min-height: 718px;
             overflow: hidden;
         
 
             .hero-left {
                 // background-color: aqua;
                 height: 94.5vh;
-                min-height: 700px;
+                // min-height: 700px;
                 //max-height: 705px;
                 width: 60vw;
                 border-right: 5px solid black;
                 display: grid;
                 .hero-left-top {
                     height: 65%;
-                    min-height: 425.5px;
+                    // min-height: 425.5px;
                     // background-color: magenta;
                     
                     .hero-name {
@@ -96,8 +96,8 @@
                 }
 
                 .hero-left-bottom {
-                    min-height: 150px;
-                    max-height: 150px;
+                    // min-height: 150px;
+                    // max-height: 150px;
                     height: 35%;
                     margin-top: 0;
                     display: flex;
@@ -107,7 +107,7 @@
                     // background-color: purple;
                     
                     .node-img {
-                        min-height: 131px;
+                        // min-height: 131px;
                         // height:20vh;
                         max-height:172px;
                         margin: 0 auto;
@@ -115,7 +115,7 @@
                         
                     }
                     .react-img {
-                        min-height: 200px;
+                        // min-height: 200px;
                         // min-width: 200px;
                         // width: 12vw;
                         // height: 12vw;
@@ -124,7 +124,7 @@
                         margin: -4vh auto;
                     }
                     .vercel-img {
-                       min-height: 205px;
+                    //    min-height: 205px;
                         // min-width:308px;
                         // height:15vw;
                         max-height:205px;
@@ -140,7 +140,7 @@
 
             .hero-right {
                 height: 94.5vh;
-                min-height: 691px;
+                // min-height: 691px;
                 width: 38.2vw;
                 display: flex;
                 flex-direction: column;
@@ -162,7 +162,7 @@
                 }
                 .hero-right-button-container {
                     height: 30%;
-                    min-height: 228px;
+                    // min-height: 228px;
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
@@ -171,7 +171,7 @@
                     
                     .cta-hero-right {
 
-                        margin: 0 auto 10% auto;
+                        margin: 0 auto 1vw auto;
 
                         background-color: var(--primary-color);
                         border:1px white solid;
@@ -199,6 +199,181 @@
         }
 
  }
+ 
+
+ @media only screen and (max-width: 1249px) and (min-width:413px) {
+
+    .hero-container {
+        width: 100vw ;       
+
+
+
+        .top-edge-typography {
+        display: none;
+        }
+
+        .heroContent {
+            display: grid;
+            grid-template-columns: 100% ;
+            grid-template-rows: 70% 30%;
+            grid-column-gap: 0;
+            grid-row-gap: 0;
+
+            .hero-left {
+
+                height: 70vh;
+                width: 100%;
+                border-right:0px;
+                // background-color: red;
+                
+
+                .hero-left-top {
+
+                    .hero-name {
+                        width: 80%;
+                        
+                        font-size: 25vmin;
+                        margin: 15vh auto 4vw auto;
+                    }
+
+                    .hero-subheading {
+                        font-size: 3vmin;
+                    }
+
+                }
+
+                .hero-left-bottom {
+                    display: none;
+            
+                }
+   
+    
+            }
+    
+            .hero-right {
+                width: 100%;
+                height: 100%;
+                margin: none;
+                // background-color: blue;
+                
+                
+                
+                .monitor-container {
+                    display: none;
+                }
+                .hero-right-button-container {
+                    height: 100%;
+                    width: 100%;
+                    
+                    .cta-hero-right {
+                        font-size: 3.5vmin;
+                    }
+
+                    .cta-hero-right-subtext {
+                        font-size: 2vmin;
+                    }
+
+                }
+                
+
+            }
+
+        }
+
+
+ 
+    }
+
+
+
+ }
+
+
+@media only screen and (max-width: 412px) {
+
+    .hero-container {
+        width: 100vw ;       
+
+
+
+        .top-edge-typography {
+        display: none;
+        }
+
+        .heroContent {
+            display: grid;
+            grid-template-columns: 100% ;
+            grid-template-rows: 70% 30%;
+            grid-column-gap: 0;
+            grid-row-gap: 0;
+
+            .hero-left {
+
+                height: 70vh;
+                width: 100%;
+                border-right:0px;
+                // background-color: red;
+                
+
+                .hero-left-top {
+
+                    .hero-name {
+                        width: 80%;
+                        
+                        font-size: calc(125px - 1vw);
+                        margin: 15vh auto 4vw auto;
+                    }
+
+                    .hero-subheading {
+                        font-size: 4vw
+                    }
+
+                }
+
+                .hero-left-bottom {
+                    display: none;
+            
+                }
+   
+    
+            }
+    
+            .hero-right {
+                width: 100%;
+                height: 100%;
+                margin: none;
+                // background-color: blue;
+                
+                
+                
+                .monitor-container {
+                    display: none;
+                }
+                .hero-right-button-container {
+                    height: 100%;
+                    width: 100%;
+                    
+                    .cta-hero-right {
+                        font-size: 3.5vw;
+                    }
+
+                    .cta-hero-right-subtext {
+                        font-size: 5vw;
+                    }
+
+                }
+                
+
+            }
+
+        }
+
+
+ 
+    }
+
+
+}
 
 
 
