--- a/src/Components/portfolio/Portfolio.css
+++ b/src/Components/portfolio/Portfolio.css
@@ -9,12 +9,11 @@
 
 .portfolio-container {
   height: 100vh;
-  min-height: 750px;
   font-family: Michroma;
   overflow: hidden;
   background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: 80% 12.5%;
+  background-size: 45%;
+  background-position: 78% 12.5%;
 }
 
 .portfolio-container .portfolio-header {
@@ -31,7 +30,7 @@
 .portfolio-container .portfolio-content-container {
   margin: auto;
   width: 95%;
-  height: 80%;
+  height: 70%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -48,7 +47,7 @@
 }
 
 .portfolio-container .portfolio-content-container .portfolio-left .project-list-container {
-  margin: 4vh auto 0 auto;
+  margin: 4vw auto 0 auto;
   width: 80%;
   height: 55%;
 }
@@ -104,6 +103,119 @@
   padding: 1vw;
   height: 30%;
   border: solid black 3px;
-  font-size: .75vw;
+}
+
+.portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-description-header {
+  font-size: calc(10.69px + .8vw);
+}
+
+.portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
+  font-size: calc(14px + .2vmax);
+}
+
+@media only screen and (max-width: 1249px) {
+  .portfolio-container {
+    background-image: none !important;
+    width: 100vw;
+    height: 100vh;
+  }
+  .portfolio-container .portfolio-header {
+    margin: 2vw auto 0vw 3vw;
+    font-size: 8vmin;
+  }
+  .portfolio-container .portfolio-content-container {
+    margin: auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    height: 85%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left {
+    height: 25%;
+    width: 100%;
+    background-image: url("../../Assets/eyes.png");
+    background-size: 50%;
+    background-repeat: no-repeat;
+    background-position: 1% 0;
+    position: relative;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left .portfolio-projects-header {
+    display: none;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left .project-list-container {
+    width: 100%;
+    height: 80%;
+    margin: 1% 3%;
+    padding-top: 1vh;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left .project-list-container ul {
+    font-size: 1vw;
+    list-style: none;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 48.5% 48.5%;
+        grid-template-columns: 48.5% 48.5%;
+    -ms-grid-rows: 100%;
+        grid-template-rows: 100%;
+    grid-column-gap: 1.3vw;
+    height: 100%;
+    width: 94%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left .contact-me-cta {
+    display: none;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-left img {
+    display: none;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0px 0px;
+    margin: 0px 0px;
+    height: 75%;
+    width: 100%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container {
+    margin: 0px 0px;
+    height: 70%;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container .preview-image {
+    height: 100%;
+    width: auto;
+    margin: 0px;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container {
+    margin: 0%;
+    height: 100%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .site-des-container .portfolio-site-details {
+    font-size: calc(1.2vh + .5vw);
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .portfolio-container .portfolio-header {
+    margin: 8vw 0vw;
+    font-size: 11vmin;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container {
+    height: 50%;
+  }
+  .portfolio-container .portfolio-content-container .portfolio-right .portfolio-preview-container .preview-image {
+    height: 100%;
+  }
 }
 /*# sourceMappingURL=Portfolio.css.map */
