--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -10,14 +10,14 @@
 
 .portfolio-container {
     height: 100vh;
-    min-height: 750px;
+    // min-height: 750px;
     // background-color: tan;
     font-family: Michroma;
     // border-bottom: solid black 5px;
     overflow: hidden;
     background-repeat: no-repeat;
-    background-size: 50%;
-    background-position: 80% 12.5%;
+    background-size: 45%;
+    background-position: 78% 12.5%;
 
     .portfolio-header {
         text-transform: uppercase;
@@ -33,7 +33,7 @@
     .portfolio-content-container {
         margin: auto;
         width: 95%;
-        height: 80%;
+        height: 70%;
         // background-color: chocolate;
         display: flex;
         
@@ -50,7 +50,7 @@
             }
 
             .project-list-container {
-                margin: 4vh auto 0 auto;                
+                margin: 4vw auto 0 auto;                
                 width: 80%;
                 height: 55%;
                 // background-color: grey;
@@ -107,7 +107,16 @@
                 padding:1vw;
                 height: 30%;
                 border: solid black 3px;
-                font-size: .75vw;
+
+                .portfolio-site-description-header {
+                    font-size: calc(10.69px + .8vw);
+                }
+
+                .portfolio-site-details {
+                    font-size: calc(14px + .2vmax);
+
+                }
+                
             }
         }
 
@@ -120,5 +129,155 @@
 
 
 
+
+}
+
+
+@media only screen and (max-width: 1249px) {
+
+    .portfolio-container {
+        // background-color: yellowgreen;
+        background-image: none !important;
+        width: 100vw;
+        height: 100vh;
+
+        .portfolio-header {
+            
+            margin: 2vw auto 0vw 3vw;
+            font-size: 8vmin;
+        }
+
+        .portfolio-content-container {
+            margin: auto;
+            // background-color: red;
+            flex-direction: column-reverse;
+            height: 85%;
+
+            .portfolio-left {
+                height: 25%;
+                width: 100%;
+                background-image: url('../../Assets/eyes.png');
+                background-size: 50%;
+                background-repeat: no-repeat;
+                background-position: 1% 0;
+                // background-color: aquamarine;
+                position: relative;
+
+                .portfolio-projects-header {
+                    display: none;
+                }
+
+                .project-list-container {
+                    width: 100%;
+                    height: 80%;
+                    margin: 1% 3%;
+                    padding-top: 1vh;
+
+                    ul {
+                        font-size: 1vw;
+                        list-style: none;
+                        display: grid;
+                        grid-template-columns: 48.5% 48.5%;
+                        grid-template-rows: 100%;
+                        grid-column-gap: 1.3vw;
+                        // grid-row-gap: .5vw;
+                        height: 100%;
+                        width: 94%;
+
+                    }
+                }
+
+                .contact-me-cta {
+                    display: none;
+                }
+
+                img {
+                    display: none;
+                }
+
+
+            }
+
+            .portfolio-right {
+                display: flex;
+                flex-direction: column;
+                padding: 0px 0px;
+                margin: 0px 0px;
+                height: 75%;
+                width: 100%;
+                // background-color: aqua;
+                
+                .portfolio-preview-container {
+                    margin: 0px 0px;
+                    height: 70%;
+                    width: 100%;
+                    display: flex;
+                    justify-content: center;
+
+                    .preview-image {
+                        height: 100%;
+                        width: auto;
+                        margin: 0px;
+
+                    }
+
+                    
+                }
+
+                .site-des-container {
+                    margin: 0%;
+                    height: 100%;
+                    
+                    .portfolio-site-details {
+                        font-size: calc(1.2vh + .5vw);
+                    }
+
+                }
+
+            }
+
+
+
+
+
+
+
+        }
+    }
+
+}
+
+
+
+@media only screen and (max-width:500px) {
+
+    .portfolio-container {
+
+
+        .portfolio-header {
+            margin: 8vw 0vw;
+            font-size: 11vmin;
+        }
+
+
+        .portfolio-content-container {
+
+            .portfolio-right {
+                .portfolio-preview-container{
+                    height: 50%;
+                    .preview-image {
+                        height: 100%;
+                    }
+
+                }
+            }
+
+
+
+        }
+
+
+
+    }
 
 }
