--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -17,7 +17,8 @@
     overflow: hidden;
     position: relative;
     z-index: 0;
-    
+    cursor:pointer;
+
     .icons {
       width: 100%;
       height: 100%;
@@ -25,8 +26,7 @@
       background-color: white;
       background-repeat: no-repeat;
       background-position: 50% 50%;
-      border: solid black 2px;
-      cursor:pointer;
+      border: solid black 2px;  
       position: relative;
       z-index: 1;
       
@@ -51,7 +51,7 @@
       z-index: 3;
       bottom: 0px;
       color: white;
-      font-size: .9em;
+      font-size: calc(12px + .2vmax);
 
       
     }
@@ -83,7 +83,10 @@
         animation-name: project-title-overlay-change;
         animation-duration: .5s;
         animation-timing-function: ease;
-        background-image: linear-gradient(175deg, rgba(255,0,0,0) 70%, var(--primary-color) 30%);
+        background-image: linear-gradient(175deg, rgba(255,0,0,0) 55%, var(--primary-color) 30%);
         opacity: 100%;
       }
 }
+
+
+
