--- a/src/Components/contact/Contact.scss
+++ b/src/Components/contact/Contact.scss
@@ -51,21 +51,23 @@
 
           .contact-form-top {
 
-            background-color: rgba(128, 128, 128, 0.407);
+            background-color: rgba(128, 128, 128, 0.498);
             width: 60%;
-            height: 65%;
+            height: 70%;
             margin: 5vh auto 0 auto;
             border: black 3px solid;
             padding: 1%;
-            font-size: 1.2vw;
+            font-size: calc(14px + .2vmax);
             .name-input {
               width: 100%;
-              font-size: 1.75vw;
+              height: 10%;
+              font-size: calc(27px + .2vmax);
               margin: 5% auto;
             }
             .email-input {
+              height: 10%;
               width: 100%;
-              font-size: 1.75vw;
+              font-size: calc(27px + .2vmax);
               margin: 5% auto;
             }
 
@@ -75,6 +77,7 @@
 
               input {
                 margin: 3% auto;
+                font-size: calc(14px + .2vmax);
               }
 
               .contact-option-label {
@@ -91,10 +94,11 @@
               height: 6vh;
               font-family: Michroma;
               font-weight: 500;
-              font-size: 1.5vw;
+              font-size: calc(14px + .2vmax);
               letter-spacing: .15em;
               color: white;
               background-color: var(--primary-color);
+              text-transform: uppercase;
               
             }
           
@@ -123,9 +127,12 @@
 
   .contact-container {
 
+    background-image: url('../../Assets/world.png');
+    background-repeat: no-repeat;
+    background-position: 0 220px;
 
     .contact-header {
-      margin: 8vw 3vw;
+      margin: 0 auto 8vh 3vw;
       font-size: 9vmin;
 
     }
@@ -137,31 +144,41 @@
       overflow: hidden;
       // height: 80%;
       margin: 0px 0px 0px 5%; 
-
+      
 
       .contact-left {
         
-        background-color: pink;
+        // background-color: pink;
         .contact-form-container {
           margin: 0px 0px 0px 0px;
           padding: 0px;
-          background-color: orange;
+          // background-color: orange;
           height: 100%;
           
           form {
             height: 100%;
             
             .contact-form-top {
+              background-color: rgba(128, 128, 128, 0.798);
               margin: 0px auto;
-              //width: 100%;
-
+              width: calc(403px + 6vmax);
               height: 85%;
+
+              
             }
 
             .contact-form-bottom {
               width: 100%;
-
               height: 15%;
+
+
+              input {
+                
+                display: block;
+                margin: 1vh auto;
+                width: calc(403px + 6vmax);
+                
+              }
             }            
           }
 
@@ -184,6 +201,31 @@
 }
 
 @media only screen and (max-width:500px) {
+
+  .contact-container {
+      .contact-header {
+        margin: 0 auto 8vh 3vw;
+        font-size: 12vmin;
+      }
+    .contact-content-container {
+      .contact-left {
+        .contact-form-container{
+          form{
+            .contact-form-top{
+              width: 100%;
+            }
+            .contact-form-bottom{
+              input {
+                width: 100%;
+              }
+            }
+          }
+        }
+      }
+    }
+
+
+  }
 
 }
 
