--- a/src/Components/heroSection/HeroSection.css
+++ b/src/Components/heroSection/HeroSection.css
@@ -11,7 +11,7 @@
 
 .hero-container .top-edge-typography {
   border-bottom: 5px solid black;
-  width: 98.56vw;
+  width: 100vw;
   padding: 0;
   margin: 0;
   display: -webkit-box;
@@ -21,7 +21,8 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   font-weight: bold;
-  font-size: 1.1vw;
+  font-size: calc(1vh + 0.5vw);
+  z-index: 0;
   letter-spacing: .15em;
   height: 5vh;
   min-height: 42.2px;
@@ -34,7 +35,8 @@
 }
 
 .hero-container .top-edge-typography .top-quotebox .quote-tag {
-  margin: 1% 0 0 0;
+  position: relative;
+  top: 17%;
   text-align: center;
 }
 
@@ -43,9 +45,11 @@
 }
 
 .hero-container .top-edge-typography .top-nametag-box .name-tag {
+  display: block;
   width: 20vw;
   text-align: center;
-  margin: 3% 0 0 0;
+  position: relative;
+  top: 17%;
 }
 
 .hero-container .heroContent {
@@ -87,10 +91,12 @@
   font-size: 2.5vw;
   text-align: center;
   text-transform: uppercase;
+  color: #fff;
+  text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
 }
 
 .hero-container .heroContent .hero-left .hero-left-bottom {
-  height: 35%;
+  height: 75%;
   margin-top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -173,9 +179,18 @@
   font-family: Michroma;
   font-size: 1.5vw;
   letter-spacing: .15em;
+  text-decoration: none;
+  padding: auto auto;
   text-transform: uppercase;
   -webkit-box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
           box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
+}
+
+.hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right .link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: white;
 }
 
 .hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right-subtext {
@@ -211,7 +226,9 @@
     margin: 15vh auto 4vw auto;
   }
   .hero-container .heroContent .hero-left .hero-left-top .hero-subheading {
-    font-size: 3vmin;
+    font-size: 4vmin;
+    color: #fff;
+    text-shadow: 0 0 7px var(--primary-color), 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
   }
   .hero-container .heroContent .hero-left .hero-left-bottom {
     display: none;
@@ -264,7 +281,9 @@
     margin: 15vh auto 4vw auto;
   }
   .hero-container .heroContent .hero-left .hero-left-top .hero-subheading {
-    font-size: 4vw;
+    font-size: 4vmin;
+    color: #fff;
+    text-shadow: 0 0 7px var(--primary-color), 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
   }
   .hero-container .heroContent .hero-left .hero-left-bottom {
     display: none;
