--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -15,13 +15,14 @@
         .top-edge-typography {
         border-bottom: 5px solid black;
         
-        width: 98.56vw;
+        width: 100vw;
         padding: 0;
         margin: 0;
         display: flex;
         justify-content:space-between;
         font-weight: bold;  
-        font-size: 1.1vw;
+        font-size: calc(1vh + 0.5vw);
+        z-index: 0;
         letter-spacing: .15em;
         height: 5vh;
         min-height: 42.2px;  
@@ -31,9 +32,11 @@
                 margin:auto;
                 padding-right: 1vw;
                 height: 100%;
+                // background-color: greenyellow;
 
                 .quote-tag {
-                    margin: 1% 0 0 0;
+                    position: relative;
+                    top: 17%;
                     text-align: center;
                     
                 }
@@ -44,9 +47,11 @@
                 border-left: 5px solid black;
 
                 .name-tag {
+                    display: block;
                     width: 20vw;
                     text-align: center;
-                    margin: 3% 0 0 0;
+                    position: relative;
+                    top: 17%;
                     
                     
                 }
@@ -92,13 +97,23 @@
                         font-size: 2.5vw;
                         text-align: center;
                         text-transform: uppercase;
+                        color: #fff;
+                        text-shadow:
+                          0 0 7px #fff,
+                          0 0 10px var(--primary-color),
+                          0 0 21px var(--primary-color),
+                          0 0 42px var(--primary-color),
+                          0 0 82px var(--primary-color),
+                          0 0 92px var(--primary-color),
+                          0 0 102px var(--primary-color),
+                          0 0 151px var(--primary-color);
                     }
                 }
 
                 .hero-left-bottom {
                     // min-height: 150px;
                     // max-height: 150px;
-                    height: 35%;
+                    height: 75%;
                     margin-top: 0;
                     display: flex;
                     justify-content: space-around;
@@ -184,9 +199,19 @@
 
                         font-size: 1.5vw;
                         letter-spacing: .15em;
+                        text-decoration: none;
+                        padding:auto auto;
 
                         text-transform: uppercase;
                         box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
+
+                        .link {
+                            width: 100%;
+                            height: 100%;
+                            text-decoration: none;
+                            color: white;
+                        }
+                        
                     }
                     .cta-hero-right-subtext {
                         font-size: 1.4vw;
@@ -237,7 +262,17 @@
                     }
 
                     .hero-subheading {
-                        font-size: 3vmin;
+                        font-size: 4vmin;
+                        color: #fff;
+                        text-shadow:
+                          0 0 7px var(--primary-color),
+                          0 0 10px var(--primary-color),
+                          0 0 21px var(--primary-color),
+                          0 0 42px var(--primary-color),
+                          0 0 82px var(--primary-color),
+                          0 0 92px var(--primary-color),
+                          0 0 102px var(--primary-color),
+                          0 0 151px var(--primary-color);
                     }
 
                 }
@@ -325,7 +360,17 @@
                     }
 
                     .hero-subheading {
-                        font-size: 4vw
+                        font-size: 4vmin;
+                        color: #fff;
+                        text-shadow:
+                          0 0 7px var(--primary-color),
+                          0 0 10px var(--primary-color),
+                          0 0 21px var(--primary-color),
+                          0 0 42px var(--primary-color),
+                          0 0 82px var(--primary-color),
+                          0 0 92px var(--primary-color),
+                          0 0 102px var(--primary-color),
+                          0 0 151px var(--primary-color);
                     }
 
                 }
