--- a/src/Components/portfolio/Portfolio.scss
+++ b/src/Components/portfolio/Portfolio.scss
@@ -75,6 +75,7 @@
 
                 .portfolio-contactme-wordhype{
                     color: var(--primary-color);
+                    text-decoration: none;
                 }
 
             }
