--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,68 @@
 /* Adding the fonts to the Project */
-@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Michroma&display=swap");
 @import url("https://use.typekit.net/pro2zmf.css");
-
-
 /* Decalring Global Vars for the color scheme */
 :root {
-
-  --primary-color: #67BA43;
+  --primary-color: #67ba43;
   --app-background:#F5F5F5;
-
-
 }
-
-
 
 .App {
   background-image: url("Assets/siteBackground.png");
+  background-blend-mode: darken;
   background-attachment: fixed;
-  background-color: #f5f5f5;
+  background-color: #ffffff;
+  height: -webkit-max-content;
+  height: -moz-max-content;
   height: max-content;
+  display: -ms-grid;
   display: grid;
   overflow: hidden;
-  
-} 
+}
 
 .app-footer {
   background-color: black;
   height: 20vh;
 }
+
+.app-footer .menu-container {
+  display: block;
+  width: calc(355px +  1vw);
+  height: 80%;
+  margin: 1vh auto auto 1vw;
+}
+
+.app-footer .menu-container .menu-options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.app-footer .menu-container .menu-options li {
+  margin: 10px auto;
+  list-style: none;
+  font-family: Michroma;
+}
+
+.app-footer .menu-container .menu-options li a {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.app-footer .menu-container .menu-options li a:hover {
+  color: var(--primary-color);
+}
+
+.app-footer .thankyou {
+  font-family: Michroma;
+  height: 10%;
+  text-align: center;
+  color: white;
+  width: 50%;
+  margin-left: 25%;
+}
+/*# sourceMappingURL=App.css.map */
