--- a/src/Components/heroSection/HeroSection.css
+++ b/src/Components/heroSection/HeroSection.css
@@ -2,6 +2,8 @@
   height: 100vh;
   border: 5px solid black;
   color: var(--primary-color);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(50%, rgba(151, 250, 108, 0.552)));
+  background-image: linear-gradient(rgba(151, 250, 108, 0.552) 50%);
   font-family: Michroma;
   display: -ms-grid;
   display: grid;
@@ -84,6 +86,30 @@
   color: black;
 }
 
+@-webkit-keyframes glowing-pulse {
+  0% {
+    text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
+  }
+  50% {
+    text-shadow: 0 0 14px #fff, 0 0 20px var(--primary-color), 0 0 42px var(--primary-color), 0 0 84px var(--primary-color), 0 0 164px var(--primary-color), 0 0 184px var(--primary-color), 0 0 204px var(--primary-color), 0 0 302px var(--primary-color);
+  }
+  100% {
+    text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
+  }
+}
+
+@keyframes glowing-pulse {
+  0% {
+    text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
+  }
+  50% {
+    text-shadow: 0 0 14px #fff, 0 0 20px var(--primary-color), 0 0 42px var(--primary-color), 0 0 84px var(--primary-color), 0 0 164px var(--primary-color), 0 0 184px var(--primary-color), 0 0 204px var(--primary-color), 0 0 302px var(--primary-color);
+  }
+  100% {
+    text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
+  }
+}
+
 .hero-container .heroContent .hero-left .hero-left-top .hero-subheading {
   margin: 0;
   padding: 0;
@@ -92,6 +118,14 @@
   text-align: center;
   text-transform: uppercase;
   color: #fff;
+  -webkit-animation-name: glowing-pulse;
+          animation-name: glowing-pulse;
+  -webkit-animation-duration: .2s;
+          animation-duration: .2s;
+  -webkit-animation-iteration-count: 4;
+          animation-iteration-count: 4;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
   text-shadow: 0 0 7px #fff, 0 0 10px var(--primary-color), 0 0 21px var(--primary-color), 0 0 42px var(--primary-color), 0 0 82px var(--primary-color), 0 0 92px var(--primary-color), 0 0 102px var(--primary-color), 0 0 151px var(--primary-color);
 }
 
@@ -172,7 +206,7 @@
 .hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right {
   margin: 0 auto 1vw auto;
   background-color: var(--primary-color);
-  border: 1px white solid;
+  border: 1px var(--primary-color) solid;
   width: 40%;
   height: 30%;
   color: white;
@@ -191,6 +225,30 @@
   height: 100%;
   text-decoration: none;
   color: white;
+}
+
+.hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right:hover {
+  margin: 0 auto 1vw auto;
+  background-color: #F5F5F5;
+  border: 1px var(--primary-color) solid;
+  width: 40%;
+  height: 30%;
+  color: var(--primary-color);
+  font-family: Michroma;
+  letter-spacing: .15em;
+  text-decoration: none;
+  padding: auto auto;
+  cursor: crosshair;
+  text-transform: uppercase;
+  -webkit-box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
+          box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
+}
+
+.hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right:hover .link {
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
 .hero-container .heroContent .hero-right .hero-right-button-container .cta-hero-right-subtext {
