--- a/src/Components/heroSection/HeroSection.scss
+++ b/src/Components/heroSection/HeroSection.scss
@@ -5,6 +5,7 @@
     //  min-height: 750px;
      border: 5px solid black; 
      color: var(--primary-color);
+     background-image: linear-gradient( rgba(151, 250, 108, 0.552) 50%);
      font-family: Michroma;
      display: grid;
      margin: 0;
@@ -77,6 +78,8 @@
                     // min-height: 425.5px;
                     // background-color: magenta;
                     
+                 
+                    
                     .hero-name {
                         margin: 15vh 0 8vh 0;
                         padding: 0;
@@ -84,10 +87,41 @@
                         font-weight: 400;
                         font-style: normal;
                         font-size: 13vw;
+                        // height: 39vh;
                         text-align: center;
                         letter-spacing: .05em;
                         line-height: .7em;
                         color:black;
+                        
+                    }
+                    @keyframes glowing-pulse {
+                        0%   {text-shadow:
+                            0 0 7px #fff,
+                            0 0 10px var(--primary-color),
+                            0 0 21px var(--primary-color),
+                            0 0 42px var(--primary-color),
+                            0 0 82px var(--primary-color),
+                            0 0 92px var(--primary-color),
+                            0 0 102px var(--primary-color),
+                            0 0 151px var(--primary-color);}
+                        50% {text-shadow:
+                            0 0 14px #fff,
+                            0 0 20px var(--primary-color),
+                            0 0 42px var(--primary-color),
+                            0 0 84px var(--primary-color),
+                            0 0 164px var(--primary-color),
+                            0 0 184px var(--primary-color),
+                            0 0 204px var(--primary-color),
+                            0 0 302px var(--primary-color);}
+                        100% {text-shadow:
+                            0 0 7px #fff,
+                            0 0 10px var(--primary-color),
+                            0 0 21px var(--primary-color),
+                            0 0 42px var(--primary-color),
+                            0 0 82px var(--primary-color),
+                            0 0 92px var(--primary-color),
+                            0 0 102px var(--primary-color),
+                            0 0 151px var(--primary-color);}
                     }
 
                     .hero-subheading {
@@ -98,6 +132,10 @@
                         text-align: center;
                         text-transform: uppercase;
                         color: #fff;
+                        animation-name: glowing-pulse;
+                        animation-duration: .2s;
+                        animation-iteration-count: 4;
+                        animation-timing-function: linear;
                         text-shadow:
                           0 0 7px #fff,
                           0 0 10px var(--primary-color),
@@ -189,7 +227,7 @@
                         margin: 0 auto 1vw auto;
 
                         background-color: var(--primary-color);
-                        border:1px white solid;
+                        border:1px var(--primary-color) solid;
 
                         width:40%;
                         height: 30%;
@@ -212,6 +250,37 @@
                             color: white;
                         }
                         
+                    }
+
+                    
+
+                    .cta-hero-right:hover{
+                        margin: 0 auto 1vw auto;
+
+                        background-color: #F5F5F5;
+                        border:1px var(--primary-color) solid;
+
+                        width:40%;
+                        height: 30%;
+
+                        color:var(--primary-color);
+                        font-family:Michroma;
+
+                        //font-size: 1.5vw;
+                        letter-spacing: .15em;
+                        text-decoration: none;
+                        padding:auto auto;
+                        cursor:crosshair;
+                        text-transform: uppercase;
+                        box-shadow: 20px 20px 6px rgba(0, 0, 0, 0.5);
+
+                        .link {
+                            width: 100%;
+                            height: 100%;
+                            text-decoration: none;
+                            color: var(--primary-color);
+                        }
+
                     }
                     .cta-hero-right-subtext {
                         font-size: 1.4vw;
