--- a/src/Components/portfolio/Projects.scss
+++ b/src/Components/portfolio/Projects.scss
@@ -32,6 +32,7 @@
       
     }
 
+    
     .project-title-overlay {
       position: absolute;
       bottom: 0px;
@@ -52,13 +53,18 @@
       bottom: 0px;
       color: white;
       font-size: calc(12px + .2vmax);
-
+      margin-bottom: 15px;
       
     }
 
     
 }
 
+.project-icon-container:hover {
+  .icons {
+    border-color: gold;
+  }
+}
 
 
 @keyframes project-title-overlay-change {
@@ -86,7 +92,11 @@
         background-image: linear-gradient(175deg, rgba(255,0,0,0) 55%, var(--primary-color) 30%);
         opacity: 100%;
       }
+
+
 }
+
+
 
 
 
